# resell-trap

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  deploy.sh  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 017c4728d6f6_add_amazon_condition_column.py  3720af61236b_initial_schema.py  3cb89988a51c_add_amazon_shipping_pattern_column.py  94436cae1bdb_add_scans_since_last_deal_to_watched_.py  a1b2c3d4e5f6_add_lead_time_days.py  a3ae1fa206e0_add_forwarding_cost_and_amazon_fee_pct_.py  a92722e911b7_add_seller_central_checklist.py  b4c5d6e7f8a9_add_amazon_condition_note.py  b7c8d9e0f1a2_add_ai_discovery.py  c3d4e5f6a7b8_add_deal_alert_images.py  c8d9e0f1a2b3_add_listing_presets.py  d4e5f6a7b8c9_add_deal_alert_shipping.py  e02a5554fe00_add_amazon_fee_pct_and_forwarding_cost_.py  e33eefc791a3_add_watched_keywords_and_deal_alerts.py  e5f6a7b8c9d0_add_deal_alert_rejection.py  f6a7b8c9d0e1_add_rejection_patterns.py  g7b8c9d0e1f2_add_condition_templates.py  (+6 more)
samples/: yahoo_auction_active.html  yahoo_auction_ended.html  yahoo_search.html
scripts/: test_keepa_dimensions.py  test_keepa_finder.py  test_keepa_finder2.py  test_keepa_finder3.py  test_keepa_finder_full.py
src/resell_trap/: auth.py  (+5 more)
tests/: conftest.py  test_ai_analyzer.py  test_ai_discovery.py  test_ai_generator.py  test_amazon_api.py  test_amazon_notifier.py  test_api.py  test_deal_scanner.py  test_extract_product_info.py  test_keepa_analyzer.py  test_keepa_api.py  test_keepa_cache.py  test_keywords_api.py  test_matcher.py  test_models.py  test_parser.py  test_pricing.py  test_series_expansion.py  test_webhook.py
(+89 files in other folders)
