[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resell-trap"
version = "0.1.0"
description = "ヤフオク→Amazon無在庫転売の在庫連動ツール"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
selenium = ["selenium>=4.15", "webdriver-manager>=4.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src/resell_trap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
