[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafuama"
version = "0.1.0"
description = "繝､繝輔が繧ｯ竊但mazon辟｡蝨ｨ蠎ｫ霆｢螢ｲ縺ｮ蝨ｨ蠎ｫ騾｣蜍輔ヤ繝ｼ繝ｫ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "apscheduler>=3.10,<4.0",
    "python-dotenv>=1.0",
    "python-amazon-sp-api>=0.20",
    "boto3>=1.34",
    "alembic>=1.13",
    "jinja2>=3.1",
    "anthropic>=0.40",
]

[project.optional-dependencies]
selenium = ["selenium>=4.15", "webdriver-manager>=4.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src/yafuama"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
